Added context for Order, OrderDetails and Customer tables

--- a/NL2SQL.Terminal/Prompts/nl2tsqlTranslator.prompt.yaml
+++ b/NL2SQL.Terminal/Prompts/nl2tsqlTranslator.prompt.yaml
@@ -53,6 +53,58 @@ template: |
     	[SupplierID] ASC
     )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
     ) ON [PRIMARY] TEXTIMAGE_ON [PRIMARY]
+
+       CREATE TABLE [dbo].[Customers](
+    [CustomerID] [nchar](5) NOT NULL,
+    [CompanyName] [nvarchar](40) NOT NULL,
+    [ContactName] [nvarchar](30) NULL,
+    [ContactTitle] [nvarchar](30) NULL,
+    [Address] [nvarchar](60) NULL,
+    [City] [nvarchar](15) NULL,
+    [Region] [nvarchar](15) NULL,
+    [PostalCode] [nvarchar](10) NULL,
+    [Country] [nvarchar](15) NULL,
+    [Phone] [nvarchar](24) NULL,
+    [Fax] [nvarchar](24) NULL,
+     CONSTRAINT [PK_Customers] PRIMARY KEY CLUSTERED 
+    (
+    	[CustomerID] ASC
+    )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+    ) ON [PRIMARY]
+
+    CREATE TABLE [dbo].[Orders](
+    [OrderID] [int] IDENTITY(1,1) NOT NULL,
+    [CustomerID] [nchar](5) NULL,
+    [EmployeeID] [int] NULL,
+    [OrderDate] [datetime] NULL,
+    [RequiredDate] [datetime] NULL,
+    [ShippedDate] [datetime] NULL,
+    [ShipVia] [int] NULL,
+    [Freight] [money] NULL,
+    [ShipName] [nvarchar](40) NULL,
+    [ShipAddress] [nvarchar](60) NULL,
+    [ShipCity] [nvarchar](15) NULL,
+    [ShipRegion] [nvarchar](15) NULL,
+    [ShipPostalCode] [nvarchar](10) NULL,
+    [ShipCountry] [nvarchar](15) NULL,
+     CONSTRAINT [PK_Orders] PRIMARY KEY CLUSTERED 
+    (
+    	[OrderID] ASC
+    )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+    ) ON [PRIMARY]
+
+    CREATE TABLE [dbo].[Order Details](
+    [OrderID] [int] NOT NULL,
+    [ProductID] [int] NOT NULL,
+    [UnitPrice] [money] NOT NULL,
+    [Quantity] [smallint] NOT NULL,
+    [Discount] [real] NOT NULL,
+     CONSTRAINT [PK_Order_Details] PRIMARY KEY CLUSTERED 
+    (
+    	[OrderID] ASC,
+    	[ProductID] ASC
+    )WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON, OPTIMIZE_FOR_SEQUENTIAL_KEY = OFF) ON [PRIMARY]
+    ) ON [PRIMARY]
   </message>
 
   <message role="user">Give me all the entries for ProductName</message>
