--- a/NL2SQL.Terminal/NL2SQL.Terminal.csproj
+++ b/NL2SQL.Terminal/NL2SQL.Terminal.csproj
@@ -9,6 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="ConsoleTables" Version="2.6.1" />
 		<PackageReference Include="Dapper" Version="2.1.28" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.5" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
