--- a/NL2SQL.Terminal/NL2SQL.Terminal.csproj
+++ b/NL2SQL.Terminal/NL2SQL.Terminal.csproj
@@ -16,6 +16,8 @@
 		<PackageReference Include="Microsoft.SemanticKernel" Version="1.4.0" />
 		<PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.4.0" />
 		<PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.4.0" />
+		<PackageReference Include="Spectre.Console" Version="0.48.0" />
+		<PackageReference Include="Spectre.Console.Cli" Version="0.48.0" />
 	</ItemGroup>
 
 	<ItemGroup>
